--- a/src/App.css
+++ b/src/App.css
@@ -3,14 +3,13 @@
 *{
   padding: 0; margin: 0;
   box-sizing: border-box;
+  list-style: none;
+  text-decoration: none;
 }
 body{
   font-family: 'Didact Gothic', sans-serif;
   /* font-family: 'Aoboshi One', serif; */
 }
-/* .App {
-  text-align: center;
-} */
 
 .background{
   background-color: whitesmoke;
