--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -1,13 +1,113 @@
+/*-------head--------*/
 .head{
-
-    background-color: #185805;
+    
+    background-color: #b97b07;
     padding: 10px 0;
     color: white;
 }
 .head i{
-    margin-right: 10px;
+    margin-right: 5px;
 }
 .head label{
     margin-right: 30px;
-    font-size: 14px;
+    font-size: 16px;
+}
+/*-------head--------*/
+
+/*-------Search--------*/
+.search{
+    padding: 20px 0;
+}
+.search .logo{
+    width: auto; height: auto;
+}
+.search .logo h1{
+    font-family: 'Aoboshi One', serif;
+    font-size: 32px;
+}
+.search .logo h1 span{
+    color: goldenrod;
+}
+.search-box{
+    width: 80%;
+    border: 2px solid grey;
+}
+.search-box i{
+    width: 6%;
+    text-align: center;
+    font-size: 20px;
+    opacity: 0.4;
+    padding: 15px 20px;
+    font-size: 17px;
+}
+.search-box input{
+    width: 100%;
+    padding: 10px;
+}
+::placeholder{
+    font-size: 16px;
+}
+.search-box span{
+    width: 20%;
+    opacity: 0.6;
+    border: 20x solid grey;
+    padding: 10px;
+}
+.cart{
+    position: relative;
+}
+.search .cart span{
+    position: absolute;
+    top: -10px; right: 0;
+    width: 20px; height: 20px;
+    border-radius: 50%;
+    text-align: center;
+    background-color: orange;
+    font-size: 12px;
+    color: white;
+}
+.search .f_flex{
+    justify-self: end;
+}
+/*-------Search--------*/
+.categories{
+    background-color: whitesmoke;
+    padding: 0 30px;
+    border-radius: 5px;
+    height: 7vh;
+    margin-top: 5px;
+}
+.categories span{
+    margin-right: 20px;
+    font-size: 30px;
+    margin-top: 10px;
+}
+.categories h4{
+    font-weight: 500;
+    font-family: 'Aoboshi One', serif;
+    margin-top: 12px;
+}
+.categories h4 i{
+    margin-left: 10px;
+}
+.header{
+    height: 8vh;
+    box-shadow: -1px 15px 17px -8px grey;
+}
+.header ul{
+    line-height: 8vh;
+}
+.header ul li{
+    margin-left: 30px;
+}
+.header ul li a{
+    transition: 0.23s;
+    font-size: 17px;
+    font-weight: 400;
+}
+.header ul li a:hover{
+    color: orange;
+}
+.open{
+    display: none;
 }
