--- a/src/App.css
+++ b/src/App.css
@@ -47,3 +47,22 @@ a{
 .RText{
   text-align: right;
 }
+input, button{
+  border: none;
+  outline: none;
+  background-color: none;
+}
+.row{
+  width: 50%;
+}
+.icon_circle{
+  width: 50px; height: 50px;
+  line-height: 5px;
+  background-color: white;
+  margin-left: 20px;
+   text-align: center;
+   border-radius: 50%;
+}
+.boxShadow{
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+}
