--- a/src/Components/Header/header.css
+++ b/src/Components/Header/header.css
@@ -74,7 +74,9 @@
 .search .f_flex{
     justify-self: end;
 }
+
 /*-------Search--------*/
+
 .categories{
     background-color: whitesmoke;
     padding: 0 30px;
@@ -115,4 +117,64 @@
 }
 .open{
     display: none;
+}
+.search.active{
+    height: 12vh;
+    position: fixed;
+    top: 0;
+    z-index: 1000;
+    width: 100%;
+    background-color: white;
+    box-shadow: -1px 11px 24px -11px rgba(0, 0, 0, 0.3);
+    transition: 0.3s ease;
+}
+
+@media(max-width: 780px){
+    .header ul {
+        padding-top: 30px;
+    }
+    .nav-links-MobilMenu{
+        position: absolute;
+        display: block;
+        list-style-type: none;
+        left: 0; top: 0;
+        transition: 0.3s ease;
+        width: 100%;
+        background-color: white;
+        z-index: 888;
+        box-shadow: rgba(50, 50, 90, 0.25) 0 50px 100px -20px rgba(0, 0, 0, 0.2);
+    }
+    .header ul li{
+        width: 100%;
+        transition: 0.4s ease-in-out;
+        text-transform: uppercase;
+        line-height: 70px;
+    }
+    .header .link{
+        display: none;
+    }
+    .close, .open{
+        position: absolute;
+        top: 35px; right: 20px;
+        color: orangered;
+        display: block;
+        font-size: 25px;
+        z-index: 999;
+    }
+    .open{
+        top: 18%;
+        right: 30px;
+    }
+    .close{
+        right: 45%;
+    }
+    .close .home-btn{
+        background: brown;
+        color: orange;
+        border-radius: 50%;
+        padding: 0; 
+        width: 60px;
+        height: 60px;
+        line-height: 60px;
+    }
 }
