--- a/src/App.css
+++ b/src/App.css
@@ -1,68 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Didact+Gothic&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Aoboshi+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap');
 *{
   padding: 0; margin: 0;
   box-sizing: border-box;
   list-style: none;
   text-decoration: none;
-}
-body{
-  font-family: 'Didact Gothic', sans-serif;
-  /* font-family: 'Aoboshi One', serif; */
-}
-
-.background{
-  background-color: whitesmoke;
-  padding: 50px 0;
-}
-.container{
-  max-width: 90%;
-  margin: auto;
-}
-.d_flex{
-  display: flex;
-  justify-content: space-between;
-}
-.c_flex{
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.f_flex{
-  display: flex;
-}
-a{
-  text-decoration: none;
-  color: black;
-}
-.li{
-  list-style: none;
-}
-.uppercase{
-  text-transform: uppercase;
-}
-.capitalize{
-  text-transform: capitalize;
-}
-.RText{
-  text-align: right;
-}
-input, button{
-  border: none;
-  outline: none;
-  background-color: none;
-}
-.row{
-  width: 50%;
-}
-.icon_circle{
-  width: 50px; height: 50px;
-  line-height: 5px;
-  background-color: white;
-  margin-left: 20px;
-   text-align: center;
-   border-radius: 50%;
-}
-.boxShadow{
-  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.1);
+  /* font-family: 'Josefin Sans', sans-serif; */
 }
