--- a/src/Components/Offers/offers.css
+++ b/src/Components/Offers/offers.css
@@ -5,7 +5,7 @@
     transition: 0.4s ease;
 }
 .offers{
-    padding: 3rem 2.7rem;
+    padding: 5rem 2.7rem;
     font-family: 'Josefin Sans', sans-serif;
 }
 .offer-details{
@@ -21,8 +21,12 @@
     padding: 12px;
     margin: 10px;
     border-radius: 8px;
-    box-shadow: 0 0 2px rgba(128, 128, 128, 0.543);
+    box-shadow: 0 0 3px rgba(128, 128, 128, 0.2);
     text-align: center;
+}
+.offer:hover{
+    transform: translateY(-7px);
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
 }
 .offer i{
     padding: 18px 15px; 
