--- a/src/Components/HomeSlider/HSlider.css
+++ b/src/Components/HomeSlider/HSlider.css
@@ -1,34 +1,136 @@
-.home-slider{
-    padding: 5rem 1rem;
+@import url("https://fonts.googleapis.com/css2?family=Roboto&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Marko+One&display=swap");
+
+.home-slider {
+  padding: 3rem 2.5rem 2.5rem 2.5rem;
+  background-image: url(../../images/HomeBG.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  font-family: "Roboto", sans-serif;
 }
-.h-slider{
-    display: flex;
-    padding: 3rem 1rem;
-    justify-content: center;
-    align-items: center;
+.h-slider {
+  display: flex;
+  padding: 2.6rem 5rem 0 5rem;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
 }
-.h-details{
-    display: flex;
-    flex: 1 1 450px;
-    flex-direction: column;
+.h-details {
+  display: flex;
+  flex: 1 1 450px;
+  flex-direction: column;
 }
-.h-details p{
-    padding: 12px 10px;
+.h-details p {
+  padding: 0 13px;
+  font-size: 25px;
+  font-weight: bold;
 }
-.h-details h1{
-    font-size: 33px;
-    padding: 15px 10px;
+.h-details h1 {
+  font-size: 60px;
+  padding: 15px 10px;
+  font-family: "Marko One", serif;
+}
+.h-details h1 span {
+  color: orangered;
+}
+.h-details button {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 7px;
+  width: fit-content;
+  margin: 7px 13px;
+  font-weight: bold;
+  color: orangered;
+  cursor: pointer;
+  background: black;
+  font-family: "Montserrat", sans-serif;
+  overflow: hidden;
+  border: none;
 }
 
-.h-image{
-    display: flex;
-    flex: 1 1 450px;
-    width: 400px;
+.h-details button:after {
+  content: "";
+  width: 0%;
+  height: 100%;
+  background: orangered;
+  color: black;
+  position: absolute;
+  transition: all 0.4s ease-in-out;
+  right: 0;
 }
 
+.h-details button:hover::after {
+  right: auto;
+  left: 0;
+  width: 100%;
+}
+button span {
+  text-align: center;
+  text-decoration: none;
+  width: 100%;
+  padding: 20px 30px;
+  color: orangered;
+  font-size: 23px;
+  font-weight: 700;
+  z-index: 20;
+  transition: all 0.3s ease-in-out;
+}
 
-@media(max-width: 990px){
-    .h-slider{
-        flex-wrap: wrap;
-    }
+button:hover span {
+  color: #000000;
+  animation: scaleUp 0.3s ease-in-out;
+}
+
+.h-details button:hover {
+  color: #000000;
+  animation: scaleUp 0.3s ease-in-out;
+}
+
+@keyframes scaleUp {
+  0% {
+    transform: scale(1);
+  }
+
+  50% {
+    transform: scale(0.95);
+  }
+
+  100% {
+    transform: scale(1);
+  }
+}
+
+.h-image {
+  display: flex;
+  flex: 1 1 250px;
+}
+
+.home-images {
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  gap: 10px;
+  cursor: pointer;
+}
+.home-images .image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (max-width: 990px) {
+  .h-slider {
+    flex-wrap: wrap;
+  }
+}
+
+.slick-prev:before,
+.slick-next:before {
+  font-size: 35px !important;
+}
+
+.slick-dots li button:before {
+    font-size: 20px !important;
 }
