--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -6,6 +6,7 @@
   text-decoration: none;
   list-style: none;
   transition: 0.2s ease;
+  /* font-family: 'Marko One', serif; */
 }
 .header {
   width: 100%;
