--- a/src/Components/HomeSlider/HSlider.css
+++ b/src/Components/HomeSlider/HSlider.css
@@ -129,6 +129,7 @@ button:hover span {
 .slick-prev:before,
 .slick-next:before {
   font-size: 35px !important;
+  display: none;
 }
 
 .slick-dots li button:before {
