--- a/src/Components/Offers/offers.css
+++ b/src/Components/Offers/offers.css
@@ -7,26 +7,35 @@
 .offers{
     padding: 5rem 2.7rem;
     font-family: 'Josefin Sans', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
 }
 .offer-details{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(290px, 1fr));
-    /* justify-content: center;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    justify-content: center;
     align-items: center;
-    flex: 2 2 100px; */
+}
+@media(min-width: 1600px){
+    .offer-details{
+        max-width: 60vw;
+    }
 }
 .offer-details .offer{
     display: flex;
     flex-direction: column;
-    padding: 12px;
+    padding: 18px 12px;
     margin: 10px;
     border-radius: 8px;
-    box-shadow: 0 0 3px rgba(128, 128, 128, 0.2);
+    box-shadow: 0 0 4px rgba(128, 128, 128, 0.4);
     text-align: center;
+    cursor: pointer;
 }
 .offer:hover{
     transform: translateY(-7px);
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 .offer i{
     padding: 18px 15px; 
