--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -65,6 +65,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    text-align: center;
     padding: 10px;
     font-size: 18px;
 }
