--- a/src/Pages/Contact/contact.css
+++ b/src/Pages/Contact/contact.css
@@ -5,4 +5,37 @@
 }
 .contact{
     padding: 5rem 1rem;
+    /* display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; */
+}
+.contact h1{
+    font-size: 42px;
+    text-align: center;
+    padding: 1rem 0;
+}
+.form{
+    padding: 10px 10rem;
+}
+.form form{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 1rem;
+}
+.form form input{
+    padding: 1rem 18rem 1rem 1rem;
+    border-radius: 4px;
+    border: none;
+    background: rgba(255, 68, 0, 0.15);
+    font-size: 18px;
+}
+.form form textarea{
+    padding: 1rem 12.5rem 1rem 1rem;
+    border-radius: 4px;
+    border: none;
+    background: rgba(255, 68, 0, 0.15);
+    font-size: 18px;
 }
