--- a/src/Components/Offers/offers.css
+++ b/src/Components/Offers/offers.css
@@ -5,7 +5,7 @@
     transition: 0.4s ease;
 }
 .offers{
-    padding: 5rem 2.7rem;
+    padding: 2rem 1rem;
     font-family: 'Josefin Sans', sans-serif;
     display: flex;
     justify-content: center;
@@ -14,9 +14,10 @@
 }
 .offer-details{
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
     justify-content: center;
     align-items: center;
+    box-shadow: 0 0 3px rgba(0, 0, 0, 0.2);
 }
 @media(min-width: 1600px){
     .offer-details{
@@ -24,34 +25,22 @@
     }
 }
 .offer-details .offer{
-    display: flex;
-    flex-direction: column;
     padding: 18px 12px;
-    margin: 10px;
+    display: flex;
+    align-items: center;
+    gap: 1.2rem;
+    /* margin: 10px; */
     border-radius: 8px;
-    box-shadow: 0 0 4px rgba(128, 128, 128, 0.4);
+    /* box-shadow: 0 0 4px rgba(128, 128, 128, 0.4); */
     text-align: center;
     cursor: pointer;
 }
-.offer:hover{
-    transform: translateY(-7px);
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+.offer-details .o-detail{
+    text-align: start;
 }
-.offer i{
-    padding: 18px 15px; 
-    color: rgb(0, 0, 0);
-    margin: 4px;
-    font-size: 29px;
-}
-.offer h3{
-    color: orangered;
-    padding: 10px;
-    font-size: 25px;
-}
-.offer p{
-    padding: 7px;
-    font-size: 20px;
-    font-weight: bold;
+.o-detail h3{
+    font-size: 18px;
+    padding: 8px 0;
 }
 @media (max-width: 950px){
     .offer-details{
