--- a/src/Components/Navbar/navbar.css
+++ b/src/Components/Navbar/navbar.css
@@ -143,10 +143,13 @@
     display: none;
   }
   .logo h1 {
-    font-size: 26px;
+    font-size: 21px;
+  }
+  .nav-icon {
+    font-size: 25px;
   }
   .s-icons i {
-    font-size: 21px;
+    font-size: 19px;
     padding: 8px;
     cursor: pointer;
   }
