--- a/src/Components/Footer/footer.css
+++ b/src/Components/Footer/footer.css
@@ -45,6 +45,7 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     padding: 30px 0;
+    gap: 2rem;
 }
 .l h2{
     padding: 20px 0 15px 6px;
@@ -61,11 +62,17 @@
  }
 .copy-write{
     background: rgba(0, 0, 0, 0.9);
-    color: orangered;
+    color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 10px;
+    padding: 1.5rem;
     font-size: 18px;
+}
+
+@media(max-width: 990px){
+    .footer{
+        padding: 4rem 1rem;
+    }
 }
